{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 801,
  "lineage": "de55bc7a-1722-7856-1afa-dee64aef9871",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02024649f170118ae",
            "arn": "arn:aws:ec2:us-east-1:323890960507:elastic-ip/eipalloc-02024649f170118ae",
            "association_id": "eipassoc-0cbd19ca865c130f4",
            "domain": "vpc",
            "id": "eipalloc-02024649f170118ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0812e52aa028ec0ff",
            "private_dns": "ip-10-0-0-69.ec2.internal",
            "private_ip": "10.0.0.69",
            "public_dns": "ec2-18-204-183-112.compute-1.amazonaws.com",
            "public_ip": "18.204.183.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8fff06e6d0a24ee",
            "arn": "arn:aws:ec2:us-east-1:323890960507:elastic-ip/eipalloc-0b8fff06e6d0a24ee",
            "association_id": "eipassoc-053fe95819ca6befe",
            "domain": "vpc",
            "id": "eipalloc-0b8fff06e6d0a24ee",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bfafc1acf7aded05",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-52-54-190-164.compute-1.amazonaws.com",
            "public_ip": "52.54.190.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:internet-gateway/igw-066d1b2f3e1495308",
            "id": "igw-066d1b2f3e1495308",
            "owner_id": "323890960507",
            "tags": {
              "Name": "igw-dev"
            },
            "tags_all": {
              "Name": "igw-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:loadbalancer/app/web-alb-dev/1e37a725abd9d93b",
            "arn_suffix": "app/web-alb-dev/1e37a725abd9d93b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-dev-283789134.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:323890960507:loadbalancer/app/web-alb-dev/1e37a725abd9d93b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0012b09791e84fd49"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0278a9b134e62d20d"
              },
              {
                "subnet_id": "subnet-09012e7d9982c48cb"
              }
            ],
            "subnets": [
              "subnet-0278a9b134e62d20d",
              "subnet-09012e7d9982c48cb"
            ],
            "tags": {
              "Name": "web-alb-dev"
            },
            "tags_all": {
              "Name": "web-alb-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:listener/app/web-alb-dev/1e37a725abd9d93b/6a2a99afa9ff12cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:targetgroup/web-tg-dev/dff9659a960e3396",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323890960507:listener/app/web-alb-dev/1e37a725abd9d93b/6a2a99afa9ff12cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:loadbalancer/app/web-alb-dev/1e37a725abd9d93b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:targetgroup/app-tg-dev/ac991971964978e0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:listener-rule/app/web-alb-dev/1e37a725abd9d93b/6a2a99afa9ff12cc/e2adc801a64f5659",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323890960507:listener-rule/app/web-alb-dev/1e37a725abd9d93b/6a2a99afa9ff12cc/e2adc801a64f5659",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:listener/app/web-alb-dev/1e37a725abd9d93b/6a2a99afa9ff12cc",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_listener.web_listener",
            "aws_lb_target_group.app_tg",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:targetgroup/app-tg-dev/ac991971964978e0",
            "arn_suffix": "targetgroup/app-tg-dev/ac991971964978e0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/data",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323890960507:targetgroup/app-tg-dev/ac991971964978e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:323890960507:loadbalancer/app/web-alb-dev/1e37a725abd9d93b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg-dev",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-tg-dev"
            },
            "tags_all": {
              "Name": "app-tg-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323890960507:targetgroup/web-tg-dev/dff9659a960e3396",
            "arn_suffix": "targetgroup/web-tg-dev/dff9659a960e3396",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323890960507:targetgroup/web-tg-dev/dff9659a960e3396",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:323890960507:loadbalancer/app/web-alb-dev/1e37a725abd9d93b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-tg-dev"
            },
            "tags_all": {
              "Name": "web-tg-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02024649f170118ae",
            "association_id": "eipassoc-0cbd19ca865c130f4",
            "connectivity_type": "public",
            "id": "nat-0f395547f3c372872",
            "network_interface_id": "eni-0812e52aa028ec0ff",
            "private_ip": "10.0.0.69",
            "public_ip": "18.204.183.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09012e7d9982c48cb",
            "tags": {
              "Name": "nat-gw-1-dev"
            },
            "tags_all": {
              "Name": "nat-gw-1-dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8fff06e6d0a24ee",
            "association_id": "eipassoc-053fe95819ca6befe",
            "connectivity_type": "public",
            "id": "nat-0da69b249b10ea21d",
            "network_interface_id": "eni-0bfafc1acf7aded05",
            "private_ip": "10.0.1.4",
            "public_ip": "52.54.190.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0278a9b134e62d20d",
            "tags": {
              "Name": "nat-gw-2-dev"
            },
            "tags_all": {
              "Name": "nat-gw-2-dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:route-table/rtb-0a50b71a6f2f28e26",
            "id": "rtb-0a50b71a6f2f28e26",
            "owner_id": "323890960507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f395547f3c372872",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt-1-dev"
            },
            "tags_all": {
              "Name": "private-app-rt-1-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:route-table/rtb-0064cea254b491c4a",
            "id": "rtb-0064cea254b491c4a",
            "owner_id": "323890960507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da69b249b10ea21d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt-2-dev"
            },
            "tags_all": {
              "Name": "private-app-rt-2-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:route-table/rtb-0648b7d7142cedf34",
            "id": "rtb-0648b7d7142cedf34",
            "owner_id": "323890960507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f395547f3c372872",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-db-rt-1-dev"
            },
            "tags_all": {
              "Name": "private-db-rt-1-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:route-table/rtb-057e2b4022fb63608",
            "id": "rtb-057e2b4022fb63608",
            "owner_id": "323890960507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da69b249b10ea21d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-db-rt-2-dev"
            },
            "tags_all": {
              "Name": "private-db-rt-2-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:route-table/rtb-0168deba6b391dc19",
            "id": "rtb-0168deba6b391dc19",
            "owner_id": "323890960507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066d1b2f3e1495308",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-dev"
            },
            "tags_all": {
              "Name": "public-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff8da59f0b08a381",
            "route_table_id": "rtb-0a50b71a6f2f28e26",
            "subnet_id": "subnet-0af0ca9f07e09ffde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0274d976740ad8a19",
            "route_table_id": "rtb-0064cea254b491c4a",
            "subnet_id": "subnet-0734d28ab4dd2c0e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b41d57966e1b845",
            "route_table_id": "rtb-0648b7d7142cedf34",
            "subnet_id": "subnet-0900598085b17639d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_db_rt",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01466b7230afff0ce",
            "route_table_id": "rtb-057e2b4022fb63608",
            "subnet_id": "subnet-0bc5e071e92c9837e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_db_rt",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097a9b2be0e967e7b",
            "route_table_id": "rtb-0168deba6b391dc19",
            "subnet_id": "subnet-09012e7d9982c48cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ea54624c87b38e5",
            "route_table_id": "rtb-0168deba6b391dc19",
            "subnet_id": "subnet-0278a9b134e62d20d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:security-group/sg-0012b09791e84fd49",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012b09791e84fd49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-dev",
            "name_prefix": "",
            "owner_id": "323890960507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-dev"
            },
            "tags_all": {
              "Name": "alb-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:security-group/sg-044d9ea6785158c6a",
            "description": "Allow traffic from ALB on port 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044d9ea6785158c6a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0012b09791e84fd49"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-tier-sg-dev",
            "name_prefix": "",
            "owner_id": "323890960507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-tier-sg-dev"
            },
            "tags_all": {
              "Name": "app-tier-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:security-group/sg-045ff9e7a4fcd95aa",
            "description": "Allow MySQL from App Tier only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045ff9e7a4fcd95aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-044d9ea6785158c6a",
                  "sg-0f386d599eb9daee6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-tier-sg-dev",
            "name_prefix": "",
            "owner_id": "323890960507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-tier-sg-dev"
            },
            "tags_all": {
              "Name": "db-tier-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:security-group/sg-0f386d599eb9daee6",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f386d599eb9daee6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0012b09791e84fd49"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg-dev",
            "name_prefix": "",
            "owner_id": "323890960507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-tier-sg-dev"
            },
            "tags_all": {
              "Name": "web-tier-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:subnet/subnet-0af0ca9f07e09ffde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af0ca9f07e09ffde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323890960507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-1-dev"
            },
            "tags_all": {
              "Name": "private-app-subnet-1-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:subnet/subnet-0734d28ab4dd2c0e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0734d28ab4dd2c0e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323890960507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-2-dev"
            },
            "tags_all": {
              "Name": "private-app-subnet-2-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:subnet/subnet-0900598085b17639d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0900598085b17639d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323890960507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-subnet-1-dev"
            },
            "tags_all": {
              "Name": "private-db-subnet-1-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:subnet/subnet-0bc5e071e92c9837e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc5e071e92c9837e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323890960507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-subnet-2-dev"
            },
            "tags_all": {
              "Name": "private-db-subnet-2-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:subnet/subnet-09012e7d9982c48cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09012e7d9982c48cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323890960507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-dev"
            },
            "tags_all": {
              "Name": "public-subnet-1-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:subnet/subnet-0278a9b134e62d20d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0278a9b134e62d20d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323890960507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2-dev"
            },
            "tags_all": {
              "Name": "public-subnet-2-dev"
            },
            "vpc_id": "vpc-0c0b4077c9d3e6c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323890960507:vpc/vpc-0c0b4077c9d3e6c9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2dec63580e655b4",
            "default_route_table_id": "rtb-084509fb6c3a459eb",
            "default_security_group_id": "sg-05fa7dee47e6cea7e",
            "dhcp_options_id": "dopt-077b6b93ce3605741",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0b4077c9d3e6c9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084509fb6c3a459eb",
            "owner_id": "323890960507",
            "tags": {
              "Name": "three-tier-vpc-dev"
            },
            "tags_all": {
              "Name": "three-tier-vpc-dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}